--- a/Get Me There/beginningCell.xib
+++ b/Get Me There/beginningCell.xib
@@ -54,8 +54,9 @@
 									<object class="IBUILabel" id="594064736">
 										<reference key="NSNextResponder" ref="126429709"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{258, 39}, {42, 21}}</string>
+										<string key="NSFrame">{{103, 3}, {114, 51}}</string>
 										<reference key="NSSuperview" ref="126429709"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="778108239"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -71,6 +72,8 @@
 										<nil key="IBUIHighlightedColor"/>
 										<int key="IBUIBaselineAdjustment">1</int>
 										<float key="IBUIMinimumFontSize">10</float>
+										<bool key="IBUIAdjustsLetterSpacingToFitWidth">YES</bool>
+										<int key="IBUITextAlignment">1</int>
 										<object class="IBUIFontDescription" key="IBUIFontDescription">
 											<int key="type">1</int>
 											<double key="pointSize">17</double>
@@ -84,35 +87,45 @@
 									<object class="IBUIImageView" id="778108239">
 										<reference key="NSNextResponder" ref="126429709"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{111, 23}, {99, 53}}</string>
+										<string key="NSFrame">{{111, 57}, {99, 29}}</string>
 										<reference key="NSSuperview" ref="126429709"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="218738363"/>
+										<int key="IBUIContentMode">1</int>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 										<object class="NSCustomResource" key="IBUIImage">
 											<string key="NSClassName">NSImage</string>
-											<string key="NSResourceName">greenArrow.jpg</string>
+											<string key="NSResourceName">routeArrow.png</string>
 										</object>
 									</object>
 									<object class="IBUIImageView" id="736181144">
 										<reference key="NSNextResponder" ref="126429709"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{8, 11}, {95, 75}}</string>
+										<string key="NSFrame">{{8, 4}, {95, 91}}</string>
 										<reference key="NSSuperview" ref="126429709"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="594064736"/>
+										<int key="IBUIContentMode">1</int>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
 									<object class="IBUIImageView" id="218738363">
 										<reference key="NSNextResponder" ref="126429709"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{218, 12}, {95, 75}}</string>
+										<string key="NSFrame">{{218, 4}, {95, 91}}</string>
 										<reference key="NSSuperview" ref="126429709"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView"/>
+										<int key="IBUIContentMode">1</int>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
 								</object>
 								<string key="NSFrameSize">{320, 100}</string>
 								<reference key="NSSuperview" ref="79333283"/>
-								<reference key="NSNextKeyView" ref="594064736"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="736181144"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
@@ -125,6 +138,7 @@
 						</object>
 						<string key="NSFrameSize">{320, 99}</string>
 						<reference key="NSSuperview" ref="249130985"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="126429709"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -139,6 +153,7 @@
 				</object>
 				<string key="NSFrameSize">{320, 100}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="79333283"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -213,10 +228,10 @@
 						<reference key="object" ref="126429709"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="778108239"/>
 							<reference ref="594064736"/>
 							<reference ref="736181144"/>
 							<reference ref="218738363"/>
+							<reference ref="778108239"/>
 						</object>
 						<reference key="parent" ref="249130985"/>
 					</object>
@@ -285,7 +300,58 @@
 			<nil key="sourceID"/>
 			<int key="maxID">12</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">beginningCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>endPicture</string>
+							<string>startPicture</string>
+							<string>test</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UIImageView</string>
+							<string>UIImageView</string>
+							<string>UILabel</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>endPicture</string>
+							<string>startPicture</string>
+							<string>test</string>
+						</object>
+						<object class="NSArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">endPicture</string>
+								<string key="candidateClassName">UIImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">startPicture</string>
+								<string key="candidateClassName">UIImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">test</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/beginningCell.h</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
@@ -295,8 +361,8 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="NS.key.0">greenArrow.jpg</string>
-			<string key="NS.object.0">{425, 411}</string>
+			<string key="NS.key.0">routeArrow.png</string>
+			<string key="NS.object.0">{87, 34}</string>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
